syntax = "proto3";

package internalpb;

import "goakt/goakt.proto";
import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/tochemey/goakt/v3/internal/internalpb;internalpb";

// ActorRef represents the actor information on the wire.
message ActorRef {
  // Specifies the actor address
  goaktpb.Address actor_address = 1;
  // Specifies the actor type
  string actor_type = 2;
  // Specifies if the actor is a singleton
  bool is_singleton = 3;
  // Specifies if the actor is disabled for relocation
  bool relocatable = 4;
  // Specifies whether actor is an entity
  bool is_entity = 5;
  // Specifies the initial actor state if it is an entity
  optional string initial_state_type = 6;
  // Specifies the passivation time
  google.protobuf.Duration passivate_after = 7;
}

// ActorProps defines the properties of an actor
// that can be used to spawn an actor remotely.
message ActorProps {
  // Specifies the actor name.
  string actor_name = 1;
  // Specifies the actor type
  string actor_type = 2;
  // Specifies if the actor is a singleton
  bool is_singleton = 3;
  // Specifies if the actor is disabled for relocation
  bool relocatable = 4;
  // Specifies whether actor is an entity
  bool is_entity = 5;
  // Specifies the initial actor state if it is an entity
  optional string initial_state_type = 6;
  // Specifies the passivation time
  google.protobuf.Duration passivate_after = 7;
}
