syntax = "proto3";

package testpb;

option go_package = "github.com/tochemey/goakt/v2/test/data;testpb";

message TestTell {}
message TestAsk {}
message TestStash {}
message TestUnstash {}
message TestUnstashAll {}
message TestPanic {}
message TestAskTimeout {}
